cv responsive + printable: update1 : open graph + twitter updated

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <meta property="og:image" content="/image-open-graphs.png">
     <meta property="og:url" content="https://daniel-portfolio-next-ts-contentful.vercel.app/">
     <meta property="og:type" content="profile">
-    <meta property="og:site_name" content="John Doe's Portfolio">
+    <meta property="og:site_name" content="Daniel B. OUATTARA resume">
     <meta property="profile:first_name" content="Daniel Boua">
     <meta property="profile:last_name" content="Ouattara">
     <meta property="profile:username" content="daniel">
     <meta property="profile:gender" content="male">
-    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="/image-open-graphs.png">
     <meta name="twitter:title" content="Curriculum Vitae - Daniel B. Ouattara">
     <meta name="twitter:description"
       content="Curriculum Vitae of Daniel B. Ouattara, mostly self-taught, specialized in Backend and Fullstack Development. Skilled in TypeScript, Node, Express, Python and cloud technologies.">
