cv responsive + printable: update 2 : open graph + test twitter updated

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum Vitae Daniel Ouattara</title>
     <meta name="description"
-      content="Curriculum Vitae of Daniel B. Ouattara, mostly self-taught, specialized in Backend and Fullstack Development. Skilled in TypeScript, Node, Express, Python and cloud technologies.">
+      content="AAA Curriculum Vitae of Daniel B. Ouattara, mostly self-taught, specialized in Backend and Fullstack Development. Skilled in TypeScript, Node, Express, Python and cloud technologies.">
     <meta name="author" content="Daniel Boua OUATTARA">
     <meta name="website" content="https://daniel-portfolio-next-ts-contentful.vercel.app/">
+    <meta name="image" content="./image-open-graphs.png">
     <meta property="og:title" content="Curriculum Vitae - Daniel B. Ouattara">
     <meta property="og:description"
-      content="Curriculum Vitae of Daniel B. Ouattara, mostly self-taught, specialized in Backend and Fullstack Development. Skilled in TypeScript, Node, Express, Python and cloud technologies.">
+      content="BBB Curriculum Vitae of Daniel B. Ouattara, mostly self-taught, specialized in Backend and Fullstack Development. Skilled in TypeScript, Node, Express, Python and cloud technologies.">
     <meta property="og:image" content="/image-open-graphs.png">
     <meta property="og:url" content="https://daniel-portfolio-next-ts-contentful.vercel.app/">
     <meta property="og:type" content="profile">
@@ -23,7 +24,7 @@
     <meta name="twitter:card" content="/image-open-graphs.png">
     <meta name="twitter:title" content="Curriculum Vitae - Daniel B. Ouattara">
     <meta name="twitter:description"
-      content="Curriculum Vitae of Daniel B. Ouattara, mostly self-taught, specialized in Backend and Fullstack Development. Skilled in TypeScript, Node, Express, Python and cloud technologies.">
+      content="CCC Curriculum Vitae of Daniel B. Ouattara, mostly self-taught, specialized in Backend and Fullstack Development. Skilled in TypeScript, Node, Express, Python and cloud technologies.">
     <meta name="twitter:image" content="/image-open-graphs.png">
     <meta name="twitter:url" content="https://daniel-portfolio-next-ts-contentful.vercel.app/">
     <meta name="twitter:site" content="@__">
