cv responsive + printable: update 3 : open graph + test twitter updated

--- a/index.html
+++ b/index.html
@@ -6,27 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum Vitae Daniel Ouattara</title>
     <meta name="description"
-      content="AAA Curriculum Vitae of Daniel B. Ouattara, mostly self-taught, specialized in Backend and Fullstack Development. Skilled in TypeScript, Node, Express, Python and cloud technologies.">
+      content="Curriculum Vitae of Daniel B. Ouattara, mostly self-taught, specialized in Backend and Fullstack Development. Skilled in TypeScript, Node, Express, Python and cloud technologies.">
     <meta name="author" content="Daniel Boua OUATTARA">
-    <meta name="website" content="https://daniel-portfolio-next-ts-contentful.vercel.app/">
+    <meta name="website" content="https://cv-daniel-ouattara-fullstack.vercel.app/">
     <meta name="image" content="./image-open-graphs.png">
     <meta property="og:title" content="Curriculum Vitae - Daniel B. Ouattara">
     <meta property="og:description"
-      content="BBB Curriculum Vitae of Daniel B. Ouattara, mostly self-taught, specialized in Backend and Fullstack Development. Skilled in TypeScript, Node, Express, Python and cloud technologies.">
+      content="Curriculum Vitae of Daniel B. Ouattara, mostly self-taught, specialized in Backend and Fullstack Development. Skilled in TypeScript, Node, Express, Python and cloud technologies.">
     <meta property="og:image" content="/image-open-graphs.png">
-    <meta property="og:url" content="https://daniel-portfolio-next-ts-contentful.vercel.app/">
+    <meta property="og:url" content="https://cv-daniel-ouattara-fullstack.vercel.app/">
     <meta property="og:type" content="profile">
     <meta property="og:site_name" content="Daniel B. OUATTARA resume">
     <meta property="profile:first_name" content="Daniel Boua">
     <meta property="profile:last_name" content="Ouattara">
     <meta property="profile:username" content="daniel">
     <meta property="profile:gender" content="male">
-    <meta name="twitter:card" content="/image-open-graphs.png">
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Curriculum Vitae - Daniel B. Ouattara">
     <meta name="twitter:description"
-      content="CCC Curriculum Vitae of Daniel B. Ouattara, mostly self-taught, specialized in Backend and Fullstack Development. Skilled in TypeScript, Node, Express, Python and cloud technologies.">
+      content="Curriculum Vitae of Daniel B. Ouattara, mostly self-taught, specialized in Backend and Fullstack Development. Skilled in TypeScript, Node, Express, Python and cloud technologies.">
     <meta name="twitter:image" content="/image-open-graphs.png">
-    <meta name="twitter:url" content="https://daniel-portfolio-next-ts-contentful.vercel.app/">
+    <meta name="twitter:url" content="https://cv-daniel-ouattara-fullstack.vercel.app/">
     <meta name="twitter:site" content="@__">
     <meta name="twitter:creator" content="@__">
     <style>
