cv responsive + printable: update 4 : open graph + test twitter updated

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
       content="Curriculum Vitae of Daniel B. Ouattara, mostly self-taught, specialized in Backend and Fullstack Development. Skilled in TypeScript, Node, Express, Python and cloud technologies.">
     <meta name="author" content="Daniel Boua OUATTARA">
     <meta name="website" content="https://cv-daniel-ouattara-fullstack.vercel.app/">
-    <meta name="image" content="./image-open-graphs.png">
+    <meta name="image" content="https://cv-daniel-ouattara-fullstack.vercel.app/image-open-graphs.png">
     <meta property="og:title" content="Curriculum Vitae - Daniel B. Ouattara">
     <meta property="og:description"
       content="Curriculum Vitae of Daniel B. Ouattara, mostly self-taught, specialized in Backend and Fullstack Development. Skilled in TypeScript, Node, Express, Python and cloud technologies.">
-    <meta property="og:image" content="/image-open-graphs.png">
+    <meta property="og:image" content=https://cv-daniel-ouattara-fullstack.vercel.app/image-open-graphs.png">
     <meta property="og:url" content="https://cv-daniel-ouattara-fullstack.vercel.app/">
     <meta property="og:type" content="profile">
     <meta property="og:site_name" content="Daniel B. OUATTARA resume">
@@ -25,7 +25,7 @@
     <meta name="twitter:title" content="Curriculum Vitae - Daniel B. Ouattara">
     <meta name="twitter:description"
       content="Curriculum Vitae of Daniel B. Ouattara, mostly self-taught, specialized in Backend and Fullstack Development. Skilled in TypeScript, Node, Express, Python and cloud technologies.">
-    <meta name="twitter:image" content="/image-open-graphs.png">
+    <meta name="twitter:image" content=https://cv-daniel-ouattara-fullstack.vercel.app/image-open-graphs.png">
     <meta name="twitter:url" content="https://cv-daniel-ouattara-fullstack.vercel.app/">
     <meta name="twitter:site" content="@__">
     <meta name="twitter:creator" content="@__">
