cv responsive + printable: update 6 : add anchors

--- a/index.html
+++ b/index.html
@@ -147,7 +147,17 @@
             <article class="skills-article">
               <h3 class="skills-h3">PROGRAMMATION</h3>
               <span class="skills-span">
-                TypeScript, JavaScript, Python, PHP
+                <a href="https://github.com/danielOuattara?tab=repositories&q=typescript&type=&language=typescript&sort="
+                  target="_blank" rel="noreferrer" aria-label="Link to TypeScript worked Projects">TypeScript</a>,
+
+                <a href="https://github.com/danielOuattara?tab=repositories&q=&type=&language=javascript&sort="
+                  target="_blank" rel="noreferrer" aria-label="Link to JavaScript worked Projects">JavaScript</a>,
+
+                <a href="https://github.com/danielOuattara?tab=repositories&q=&type=&language=python&sort="
+                  target="_blank" rel="noreferrer" aria-label="Link to Python worked Projects">Python</a>,
+
+                <a href="https://github.com/danielOuattara?tab=repositories&q=&type=&language=php&sort=" target="_blank"
+                  rel="noreferrer" aria-label="Link to PHP worked Projects">PHP</a>
               </span>
             </article>
           </li>
@@ -155,7 +165,17 @@
           <li class="skills-li">
             <article class="skills-article">
               <h3 class="skills-h3">BACKEND</h3>
-              <span class="skills-span">Node, Deno, PHP, Python, </span>
+              <span class="skills-span">
+
+                <a href="https://github.com/danielOuattara?tab=repositories&q=node&type=&language=&sort="
+                  target="_blank" rel="noreferrer" aria-label="Link to Node worked Projects">Node</a>,
+
+                <a href="https://github.com/danielOuattara?tab=repositories&q=deno&type=&language=&sort="
+                  target="_blank" rel="noreferrer" aria-label="Link to Deno worked Projects">Deno </a>,
+
+                <a href="https://github.com/danielOuattara?tab=repositories&q=&type=&language=python&sort="
+                  target="_blank" rel="noreferrer" aria-label="Link to Python worked Projects">Python</a>
+              </span>
             </article>
           </li>
 
@@ -163,57 +183,121 @@
             <article class="skills-article">
               <h3 class="skills-h3">FRAMEWORKS BACKEND</h3>
               <span class="skills-span">
-                Express, Next, Nest, Strapi, Django, Flask, Laravel,
-                Symfony</span>
+                <a href="https://github.com/danielOuattara?tab=repositories&q=express&type=&language=&sort="
+                  target="_blank" rel="noreferrer" aria-label="Link to Express worked Projects">Express</a>,
+                <a href="https://github.com/danielOuattara?tab=repositories&q=Next&type=&language=&sort="
+                  target="_blank" rel="noreferrer" aria-label="Link to Next.js worked Projects">Next</a>,
+                <a href="https://github.com/danielOuattara?tab=repositories&q=nest&type=&language=&sort="
+                  target="_blank" rel="noreferrer" aria-label="Link to Nest.js worked Projects">Nest</a>,
+                <a href="https://github.com/danielOuattara?tab=repositories&q=strapi&type=&language=&sort="
+                  target="_blank" rel="noreferrer" aria-label="Link to Stapi.js worked Projects">Strapi</a>,
+                <a href="https://github.com/danielOuattara?tab=repositories&q=django&type=&language=&sort="
+                  target="_blank" rel="noreferrer" aria-label="Link to Django worked Projects">Django</a>,
+                <a href="https://github.com/danielOuattara?tab=repositories&q=flask&type=&language=&sort="
+                  target="_blank" rel="noreferrer" aria-label="Link to Flask worked Projects">Flask</a>,
+                <a href="https://github.com/danielOuattara?tab=repositories&q=laravel&type=&language=&sort="
+                  target="_blank" rel="noreferrer" aria-label="Link to Laravel worked Projects">Laravel</a>,
+                <a href="https://github.com/danielOuattara?tab=repositories&q=symfony&type=&language=&sort="
+                  target="_blank" rel="noreferrer" aria-label="Link to Symfony worked Projects">Symfony</a>
+
+              </span>
             </article>
           </li>
 
           <li class="skills-li">
             <article class="skills-article">
               <h3 class="skills-h3">FRAMEWORKS FRONTEND</h3>
-              <span class="skills-span">React, Next, Vue, GatsBy</span>
+              <span class="skills-span">
+
+                <a href="https://github.com/danielOuattara?tab=repositories&q=react&type=&language=&sort="
+                  target="_blank" rel="noreferrer" aria-label="Link to React.js worked Projects">React</a>,
+                <a href="https://github.com/danielOuattara?tab=repositories&q=next&type=&language=&sort="
+                  target="_blank" rel="noreferrer" aria-label="Link to Next.js worked Projects">Next</a>,
+                <a href="https://github.com/danielOuattara?tab=repositories&q=vue&type=&language=&sort=" target="_blank"
+                  rel="noreferrer" aria-label="Link to Vue.js worked Projects">Vue</a>,
+                <a href="https://github.com/danielOuattara?tab=repositories&q=gatsby&type=&language=&sort="
+                  target="_blank" rel="noreferrer" aria-label="Link to Gatsby.js worked Projects">Gatsby</a>
+              </span>
             </article>
           </li>
 
           <li class="skills-li">
             <article class="skills-article">
               <h3 class="skills-h3">FRAMEWORKS MOBILE</h3>
-              <span class="skills-span">React Native, Expo</span>
+              <span class="skills-span">
+                <a href="https://github.com/danielOuattara?tab=repositories&q=react+native&type=&language=&sort="
+                  target="_blank" rel="noreferrer" aria-label="Link to React Native worked Projects">React Native</a>,
+                <a href="https://github.com/danielOuattara?tab=repositories&q=expo&type=&language=&sort="
+                  target="_blank" rel="noreferrer" aria-label="Link to Expo worked Projects">Expo</a>
+              </span>
             </article>
           </li>
 
           <li class="skills-li">
             <article class="skills-article">
               <h3 class="skills-h3">DATABASES</h3>
-              <span class="skills-span">PostgreSQL, MySQL, SQLite MongoDB</span>
+              <span class="skills-span">
+                <a href="https://github.com/danielOuattara?tab=repositories&q=postgres&type=&language=&sort="
+                  target="_blank" rel="noreferrer" aria-label="Link to PostgreSQL worked Projects">PostgreSQL</a>,
+                <a href="https://github.com/danielOuattara?tab=repositories&q=mysql&type=&language=&sort="
+                  target="_blank" rel="noreferrer" aria-label="Link to MySQL worked Projects">MySQL</a>,
+                <a href="https://github.com/danielOuattara?tab=repositories&q=MongoDB&type=&language=&sort="
+                  target="_blank" rel="noreferrer" aria-label="Link to MongoDB worked Projects">MongoDB</a>
+              </span>
             </article>
           </li>
 
           <li class="skills-li">
             <article class="skills-article">
               <h3 class="skills-h3">TESTS</h3>
-              <span class="skills-span">Mocha, Chaï, Jest</span>
+              <span class="skills-span">
+                Mocha, Chaï, Jest </span>
             </article>
           </li>
 
           <li class="skills-li">
             <article class="skills-article">
               <h3 class="skills-h3">DEVOPS</h3>
-              <span class="skills-span">Linux, Docker, Kubernetes</span>
+              <span class="skills-span">
+                Linux
+                <a href="https://github.com/danielOuattara?tab=repositories&q=expo&type=&language=&sort="
+                  target="_blank" rel="noreferrer" aria-label="Link to Expo worked Projects">Expo</a>,
+                <a href="https://github.com/danielOuattara?tab=repositories&q=Docker&type=&language=&sort="
+                  target="_blank" rel="noreferrer" aria-label="Link to Docker worked Projects">Docker</a>,
+                Kubernetes
+              </span>
             </article>
           </li>
 
           <li class="skills-li">
             <article class="skills-article">
               <h3 class="skills-h3">ORM / ODM</h3>
-              <span class="skills-span">Prisma, Sequelize, Mongoose</span>
+              <span class="skills-span">
+                Prisma,
+                <a href="https://github.com/danielOuattara?tab=repositories&q=sequelize&type=&language=&sort="
+                  target="_blank" rel="noreferrer" aria-label="Link to Sequelize worked Projects">Sequelize</a>,
+                <a href="https://github.com/danielOuattara?tab=repositories&q=mongoose&type=&language=&sort="
+                  target="_blank" rel="noreferrer" aria-label="Link to Mongoose worked Projects">Mongoose</a>
+              </span>
             </article>
           </li>
 
           <li class="skills-li">
             <article class="skills-article">
               <h3 class="skills-h3">OUTILS WEB / DEV</h3>
-              <span class="skills-span">HTML, CSS, TailwindCSS, Sass, Git, GitHub</span>
+              <span class="skills-span">
+
+                <a href="https://github.com/danielOuattara?tab=repositories&q=HTML&type=&language=&sort="
+                  target="_blank" rel="noreferrer" aria-label="Link to HTML worked Projects">HTML</a>,
+                <a href="https://github.com/danielOuattara?tab=repositories&q=CSS&type=&language=&sort=" target="_blank"
+                  rel="noreferrer" aria-label="Link to CSS worked Projects">CSS</a>,
+                <a href="https://github.com/danielOuattara?tab=repositories&q=TailwindCSS&type=&language=&sort="
+                  target="_blank" rel="noreferrer" aria-label="Link to TailwindCSS worked Projects">TailwindCSS</a>,
+                <a href="https://github.com/danielOuattara?tab=repositories&q=SAss&type=&language=&sort="
+                  target="_blank" rel="noreferrer" aria-label="Link to Sass worked Projects">Sass</a>,
+                Git, GitHub
+
+              </span>
             </article>
           </li>
         </ul>
@@ -486,7 +570,8 @@
                 Sept. 2008 - Sept. 2011:
               </span>
               <h3 class="education-article-h3">
-                Master Science de l'ingénieur, Aérodynamique et énergie
+                Master Science de l'ingénieur, Aérodynamique et Conversion
+                d'Énergie
               </h3>
               <p class="education-paragraph">
                 Université Pierre & Marie Curie, Paris 6
@@ -501,7 +586,7 @@
               </span>
               <h3 class="education-article-h3">
                 Licence Science de l'ingénieur, Mécanique de Fluides et
-                énergétiques
+                Énergétiques
               </h3>
               <p class="education-paragraph">
                 Université Pierre & Marie Curie, Paris 6
