update skills: remove laravel & symfony for now

--- a/index.html
+++ b/index.html
@@ -195,10 +195,10 @@
                   target="_blank" rel="noreferrer" aria-label="Link to Django worked Projects">Django</a>,
                 <a href="https://github.com/danielOuattara?tab=repositories&q=flask&type=&language=&sort="
                   target="_blank" rel="noreferrer" aria-label="Link to Flask worked Projects">Flask</a>,
-                <a href="https://github.com/danielOuattara?tab=repositories&q=laravel&type=&language=&sort="
-                  target="_blank" rel="noreferrer" aria-label="Link to Laravel worked Projects">Laravel</a>,
-                <a href="https://github.com/danielOuattara?tab=repositories&q=symfony&type=&language=&sort="
-                  target="_blank" rel="noreferrer" aria-label="Link to Symfony worked Projects">Symfony</a>
+                <!-- <a href="https://github.com/danielOuattara?tab=repositories&q=laravel&type=&language=&sort="
+                  target="_blank" rel="noreferrer" aria-label="Link to Laravel worked Projects">Laravel</a>, -->
+                <!-- <a href="https://github.com/danielOuattara?tab=repositories&q=symfony&type=&language=&sort="
+                  target="_blank" rel="noreferrer" aria-label="Link to Symfony worked Projects">Symfony</a> -->
 
               </span>
             </article>
