--- a/index.html
+++ b/index.html
@@ -35,17 +35,21 @@
         font-family: 'FontAwesome';
       }
 
-      .header {
+      /* .header {
         background: url('web-dev-wallpaper.webp') no-repeat center center;
-      }
+      } */
     </style>
     <script src="https://kit.fontawesome.com/3ef8dafccd.js" crossorigin="anonymous" defer></script>
-    <!-- <link rel="stylesheet" href="./styles.css" type="text/css"> -->
+    <link rel="stylesheet" href="./styles.css" type="text/css">
     <!-- <link rel="stylesheet" href="./print.css" type="text/css" media="print"> -->
   </head>
 
   <body>
-
+    <header class="header">
+    </header>
+    <aside class="aside"></aside>
+    <main class="main"></main>
+    <footer class="footer"></footer>
   </body>
 
 </html>
