added structures elements + styles again

--- a/index.html
+++ b/index.html
@@ -41,15 +41,13 @@
     </style>
     <script src="https://kit.fontawesome.com/3ef8dafccd.js" crossorigin="anonymous" defer></script>
     <link rel="stylesheet" href="./styles.css" type="text/css">
-    <!-- <link rel="stylesheet" href="./print.css" type="text/css" media="print"> -->
+    <link rel="stylesheet" href="./print.css" type="text/css" media="print">
   </head>
 
   <body>
     <header class="header">
-      <section class="header-titles">
-        <h1>Daniel B. OUATTARA</h1>
-        <h2>Développeur Fullstack</h2>
-      </section>
+      <h1>Daniel B. OUATTARA</h1>
+      <h2>Développeur Fullstack</h2>
     </header>
     <aside class="aside">
       <section>
@@ -57,14 +55,7 @@
           <!-- <i class="fa-solid fa-medal fa-xl"></i> -->
           CONTACT & LIENS
         </h2>
-        <div class="header-links-icons">
-          <a href="https://www.google.fr/maps/place/77380+Combs-la-Ville/@48.6544588,2.5541977,11.88z/data=!4m15!1m8!3m7!1s0x47e5e24240b9b5c3:0x207b18c3188f42b3!2s77380+Combs-la-Ville!3b1!8m2!3d48.66602!4d2.55769!16zL20vMDh3MW01!3m5!1s0x47e5e24240b9b5c3:0x207b18c3188f42b3!8m2!3d48.66602!4d2.55769!16zL20vMDh3MW01?entry=ttu&g_ep=EgoyMDI0MDgyMC4xIKXMDSoASAFQAw%3D%3D"
-            target="_blank" rel="noreferrer" aria-label="Location on google map"><i
-              class="fa-solid fa-location-dot"></i>Combs
-            la ville,
-            77,
-            France</a>
-
+        <div class="aside-links-icons">
           <a href="tel:+33767429711" target="_blank" rel="noreferrer" aria-label="Phone Number"><i
               class="fa-solid fa-phone"></i>+337-67-42-97-11</a>
 
@@ -72,7 +63,7 @@
               class="fa-solid fa-envelope"></i>Email</a>
 
           <a href="https://daniel-portfolio-next-ts-contentful.vercel.app/" target="_blank" rel="noreferrer"
-            aria-label="Portfolio Website Link"><i class="fa-solid fa-globe"></i>Portfolio</a>
+            aria-label="Portfolio Website Link"><i class="fa-solid fa-globe"></i>Portfolio web</a>
 
           <a href="https://github.com/danielOuattara" target="_blank" rel="noreferrer" aria-label="Github Link">
             <i class="fa-brands fa-square-github"></i>Github</a>
@@ -80,6 +71,12 @@
             aria-label="LinkedIn Link">
             <i class="fa-brands fa-linkedin-in"></i>Linkedin
           </a>
+          <a href="https://www.google.fr/maps/place/77380+Combs-la-Ville/@48.6544588,2.5541977,11.88z/data=!4m15!1m8!3m7!1s0x47e5e24240b9b5c3:0x207b18c3188f42b3!2s77380+Combs-la-Ville!3b1!8m2!3d48.66602!4d2.55769!16zL20vMDh3MW01!3m5!1s0x47e5e24240b9b5c3:0x207b18c3188f42b3!8m2!3d48.66602!4d2.55769!16zL20vMDh3MW01?entry=ttu&g_ep=EgoyMDI0MDgyMC4xIKXMDSoASAFQAw%3D%3D"
+            target="_blank" rel="noreferrer" aria-label="Location on google map"><i
+              class="fa-solid fa-location-dot"></i>Combs
+            la ville,
+            77,
+            France</a>
         </div>
       </section>
       <section class="strategies">
@@ -105,7 +102,7 @@
           </li>
           <li class="strengths-li">
             <!-- <i class="fa-solid fa-people-group"></i> -->
-            <span class="strengths-span"> Coopération de groupe </span>
+            <span class="strengths-span"> Coopération en équipe </span>
           </li>
           <li class="strengths-li">
             <!-- <i class="fa-solid fa-dumbbell"></i> -->
@@ -120,16 +117,16 @@
         </ul>
       </section>
 
-      <section class="skills">
-        <h2 class="skills-title">
+      <section class="tools">
+        <h2 class="tools-title">
           <!-- <i class="fa-solid fa-screwdriver-wrench fa-xl"></i> -->
           OUTILS
         </h2>
-        <ul class="skills-ul">
-          <li class="skills-li">
-            <article class="skills-article">
-              <h3 class="skills-h3">PROGRAMMATION</h3>
-              <span class="skills-span">
+        <ul class="tools-ul">
+          <li class="tools-li">
+            <article class="tools-article">
+              <h3 class="tools-h3">PROGRAMMATION</h3>
+              <span class="tools-span">
                 <a href="https://github.com/danielOuattara?tab=repositories&q=&type=&language=javascript&sort="
                   target="_blank" rel="noreferrer" aria-label="Link to JavaScript worked Projects">JavaScript</a>,
                 <a href="https://github.com/danielOuattara?tab=repositories&q=typescript&type=&language=typescript&sort="
@@ -279,42 +276,46 @@
           AUTRE COMPETENCES
         </h2>
         <ul class="other-tools-ul">
-          <li class="other-tools-li">
+
+          <!-- <li class="other-tools-li">
             <article class="other-tools-article">
               <h3 class="other-tools-h3">Modélisation & Calcul CFD</h3>
               <span class="other-tools-span">
                 Fluent, Gambit, Matlab, OpenFOAM
               </span>
             </article>
-          </li>
-          <li class="other-tools-li">
+          </li> -->
+
+          <!-- <li class="other-tools-li">
             <article class="other-tools-article">
               <h3 class="other-tools-h3">Conduite Poids Lourd</h3>
             </article>
-          </li>
-          <li class="other-tools-li">
+          </li> -->
+
+          <!-- <li class="other-tools-li">
             <article class="other-tools-article">
               <h3 class="other-tools-h3">Soudure Métallique</h3>
               <span class="other-tools-span">
                 Soudure à l'arc, Soudure MIG
               </span>
             </article>
-          </li>
-          <li class="other-tools-li">
+          </li> -->
+
+          <!-- <li class="other-tools-li">
             <article class="other-tools-article">
               <h3 class="other-tools-h3">Agro-écologie</h3>
             </article>
-          </li>
+          </li> -->
         </ul>
       </section>
 
 
 
 
-      <section class="other-activities">
-        <h2 class="other-activities-title">
-          <!-- <i class="fa-solid fa-gears fa-xl"></i> -->
-          AUTRES ACTIVITÉS
+      <!-- <section class="other-activities">
+        <h2 class="other-activities-title"> -->
+      <!-- <i class="fa-solid fa-gears fa-xl"></i> -->
+      <!-- AUTRES ACTIVITÉS
         </h2>
         <ul class="other-activities-ul">
           <li class="other-activities-li">
@@ -343,7 +344,9 @@
           </li>
 
         </ul>
-      </section>
+      </section> -->
+
+
     </aside>
     <main class="main">
       <section class="resume">
@@ -378,7 +381,7 @@
         <ul class="education-ul">
           <li class="education-li">
             <article class="education-article">
-              <span class="education-span-date-info">
+              <span class="education-span-date-info date-info">
                 Janv. 2021 - présent:
               </span>
               <h3 class="education-article-h3">
@@ -395,7 +398,7 @@
 
           <li class="education-li">
             <article class="education-article">
-              <span class="education-span-date-info">
+              <span class="education-span-date-info date-info">
                 Déc. 2021 - présent:
               </span>
               <h3 class="education-article-h3">
@@ -413,7 +416,7 @@
           </li>
           <li class="education-li">
             <article class="education-article">
-              <span class="education-span-date-info">
+              <span class="education-span-date-info date-info">
                 Janv. 2022 - present
               </span>
               <h3 class="education-article-h3">
@@ -440,7 +443,7 @@
 
           <li class="education-li">
             <article class="education-article">
-              <span class="education-span-date-info">
+              <span class="education-span-date-info date-info">
                 Août 2020 - Juin 2021:
               </span>
               <h3 class="education-article-h3">
@@ -463,7 +466,7 @@
 
           <li class="education-li">
             <article class="education-article">
-              <span class="education-span-date-info">
+              <span class="education-span-date-info date-info">
                 Déc. 2019 - présent:
               </span>
               <h3 class="education-article-h3">
@@ -496,7 +499,7 @@
 
           <li class="education-li">
             <article class="education-article">
-              <span class="education-span-date-info">
+              <span class="education-span-date-info date-info">
                 Sept. 2008 - Sept. 2011:
               </span>
               <h3 class="education-article-h3">
@@ -520,7 +523,7 @@
         <ul class="experiences-ul">
           <li class="experiences-li">
             <article class="experiences-article">
-              <span class="experiences-span-date-info">
+              <span class="experiences-span-date-info date-info">
                 Mars 2018 - Déc. 2022, Burkina Faso
               </span>
               <h3 class="experiences-h3">
@@ -535,7 +538,7 @@
 
           <li class="experiences-li">
             <article class="experiences-article">
-              <span class="experiences-span-date-info">Oct.2005 - Sept. 2017, Ile de France</span>
+              <span class="experiences-span-date-info date-info">Oct.2005 - Sept. 2017, Ile de France</span>
               <h3 class="experiences-h3">
                 Professeur Mathématiques, Physique-Chimie, IDF
               </h3>
@@ -547,7 +550,7 @@
 
           <li class="experiences-li">
             <article class="experiences-article">
-              <span class="experiences-span-date-info">
+              <span class="experiences-span-date-info date-info">
                 Mars-Sept. 2011, Ingéliance, Grenoble
               </span>
               <h3 class="experiences-h3">
@@ -561,7 +564,7 @@
           </li>
           <li class="experiences-li">
             <article class="experiences-article">
-              <span class="experiences-span-date-info">
+              <span class="experiences-span-date-info date-info">
                 Mai-Sept. 2009, GEMICO, Nancy
               </span>
               <h3 class="experiences-h3">
