cv update-v1 almost completed: request for correction

--- a/index.html
+++ b/index.html
@@ -581,6 +581,7 @@
       </section>
 
     </main>
+    <p class="final-note">Designed using HTML & CSS only</p>
     <footer class="footer">
       <h2 class="footer-h2">Contact & Références:</h2>
       <div class="footer-links-icons">
