correct text and style

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
           <li class="strategies-li">
             <span class="strategies-span">
-              Discuter, planifier et organiser en amont, coder et tester ensuite, puis réitérer si nécessaire.
+              Discuter et planifier en amont, coder et tester ensuite, puis réitérer si nécessaire.
             </span>
           </li>
 
@@ -541,7 +541,7 @@
 
     </main>
 
-    <p class="final-note">Designed using HTML & CSS only</p>
+    <p class="final-note">Conception HTML & CSS</p>
 
   </body>
 
