update: added arrow to project link

--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                   target="_blank" rel="noreferrer" aria-label="Link to github code base page">
 
                   Conception et développement d'une API REST sécurisée pour une plateforme
-                  e-commerce (Node, Express, TypeScript, MongoDB, Stripe) </a>
+                  e-commerce (Node, Express, TypeScript, MongoDB, Stripe) &#129109;</a>
               </h3>
               <p>
                 <span class="projects-inner-span">
@@ -386,7 +386,7 @@
                     target="_blank" rel="noreferrer" aria-label="Link to github code base page">
                     React, TypeScript, Redux toolkit, TailwindCSS. Authentification, authorization, roles, login, sign
                     in.
-                    Gestion des produits, panier, checkout, order
+                    Gestion des produits, panier, checkout, order &#129109;
                   </a>
                 </span>
               </p>
@@ -394,7 +394,8 @@
                 <span class="projects-inner-span">
                   <a href="https://github.com/danielOuattara/Next.js14_John_Smilga/tree/main/04-comfy-store-app-nextjs-typescript"
                     target="_blank" rel="noreferrer" aria-label="Link to github code base page">
-                    idem avec le stack Next, TypeScript, TailwindCSS, Shadcn/ui, Supabase, Postgres, Prisma. </a>
+                    idem avec le stack Next, TypeScript, TailwindCSS, Shadcn/ui, Supabase, Postgres, Prisma.
+                    &#129109;</a>
                 </span>
               </p>
             </article>
