--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
         <p class="resume-text">
           En reconversion professionnelle, je suis développeur diplômé d'OpenClassrooms et autodidacte passionné avec un
           profil Junior solide en développement fullstack, frontend et backend. Je me suis également formé sur des
-          plateformes reconnues tels que Udemy, FreeCodeCamp, aussi auprès d'experts tels que <span>
+          plateformes reconnues telles que Udemy, FreeCodeCamp, aussi auprès d'experts tels que <span>
             <a href="https://academind.com/" target="_blank" rel="noreferrer" aria-label="Link to Academind webpage">
               Academind</a>,
             <a href="https://www.traversymedia.com/" target="_blank" rel="noreferrer"
