update style & modify text

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <section class="strategies">
         <h2 class="strategies-title">
           <!-- <i class="fa-solid fa-medal fa-xl"></i> -->
-          STRATÉGIE
+          STRATÉGIES
         </h2>
         <p class="strategies-text">
         </p>
@@ -98,7 +98,7 @@
 
           <li class="strategies-li">
             <span class="strategies-span">
-              Discuter et planifier en amont, coder et tester ensuite, puis réitérer si nécessaire.
+              Discuter et planifier en amont, coder et tester ensuite, puis réitérer.
             </span>
           </li>
 
@@ -342,7 +342,7 @@
           avec autonomie et rigueur. Particulièrement intéressé par les méthodes Scrum et Agile.
           <a href="https://daniel-portfolio-next-ts-contentful.vercel.app/" target="_blank" rel="noreferrer"
             aria-label="Link to my portfolio websbite">Mon portfolio
-            regroupe mes réalisations.</a>
+            regroupe mes réalisations &#129109;.</a>
         </p>
       </section>
 
